--- a/index.html
+++ b/index.html
@@ -1,39 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/6dc49d36d8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nerdify Test</title>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <title>My Grid Experiments</title>
 </head>
+
 <body>
     <div class="main-container">
         <header>
-            header
+            <nav>
+                <ul class="links">
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-arrow-left"></i>
+                            BACK
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            MENU
+                            <i class="fas fa-bars"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </header>
+
         <main>
             <section>
                 <h1>See inside a Neo student apartment</h1>
                 <p>Our standard, well-designed studio apartment</p>
-                <div>
-                    <ul class="main-links">
-                        <li><a href="#">VIRTUAL TOUR <i class="fas fa-arrow-circle-right"></i></a></li>
-                        <li><a href="#">MAGIC DOOR <i class="fas fa-arrow-circle-right"></i></a></li>
-                    </ul>
-                </div>
+                <ul class="links">
+                    <li>
+                        <a href="#">
+                            VIRTUAL TOUR
+                            <i class="far fa-arrow-alt-circle-right"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            MAGIC DOOR
+                            <i class="far fa-arrow-alt-circle-right"></i>
+                        </a>
+                    </li>
+
+                </ul>
             </section>
         </main>
+
         <aside>
-            <p>Prices from <strong><span>&#163;165 </span>/ pw</strong></p>
+            <p>Prices from 165 / pw</p>
         </aside>
+
         <footer>
             footer
         </footer>
     </div>
 </body>
+
 </html>
