Diseño completado. Faltan retoques.

--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-    <title>My Grid Experiments</title>
+    <title>Nerdify Test</title>
 </head>
 
 <body>
     <div class="main-container">
+
         <header>
             <nav>
                 <ul class="links">
                     <li>
                         <a href="#">
-                            <i class="fas fa-arrow-left"></i>
+                            <i class="fas fa-arrow-left fa-2x"></i>
                             BACK
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             MENU
-                            <i class="fas fa-bars"></i>
+                            <i class="fas fa-bars fa-2x"></i>
                         </a>
                     </li>
                 </ul>
@@ -35,19 +36,19 @@
 
         <main>
             <section>
-                <h1>See inside a Neo student apartment</h1>
+                <h1>See inside a Neo <br> student apartment</h1>
                 <p>Our standard, well-designed studio apartment</p>
                 <ul class="links">
                     <li>
                         <a href="#">
                             VIRTUAL TOUR
-                            <i class="far fa-arrow-alt-circle-right"></i>
+                            <i class="far fa-arrow-alt-circle-right fa-2x"></i>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             MAGIC DOOR
-                            <i class="far fa-arrow-alt-circle-right"></i>
+                            <i class="far fa-arrow-alt-circle-right fa-2x"></i>
                         </a>
                     </li>
 
@@ -56,12 +57,32 @@
         </main>
 
         <aside>
-            <p>Prices from 165 / pw</p>
+            <p>Prices from <br> <strong>&#163;<span>165</span></strong> /pw</p>
         </aside>
 
         <footer>
-            footer
+            <h2>Neo features</h2>
+            <div class="neo-features-container">
+                <div class="neo-features">
+                    <i class="fas fa-sink fa-2x"></i>
+                    <i class="fas fa-wifi fa-2x"></i>
+                    <i class="fas fa-umbrella fa-2x"></i>
+                    <i class="fas fa-tv fa-2x"></i>
+                    <i class="fas fa-lock-open fa-2x"></i>
+                    <i class="fas fa-faucet fa-2x"></i>
+                    <i class="fas fa-blender fa-2x"></i>
+                </div>
+                <ul class="links">
+                    <li>
+                        <a href="#">
+                            SEE MORE
+                            <i class="far fa-arrow-alt-circle-right fa-2x"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </footer>
+
     </div>
 </body>
 
