Diseño terminado. Falta responsive mode.

--- a/index.html
+++ b/index.html
@@ -19,16 +19,10 @@
             <nav>
                 <ul class="links">
                     <li>
-                        <a href="#">
-                            <i class="fas fa-arrow-left fa-2x"></i>
-                            BACK
-                        </a>
+                        <a href="#"><i class="fas fa-arrow-left fa-2x icons"></i>BACK</a>
                     </li>
                     <li>
-                        <a href="#">
-                            MENU
-                            <i class="fas fa-bars fa-2x"></i>
-                        </a>
+                        <a href="#">MENU<i class="fas fa-bars fa-2x icons"></i></a>
                     </li>
                 </ul>
             </nav>
@@ -36,20 +30,14 @@
 
         <main>
             <section>
-                <h1>See inside a Neo <br> student apartment</h1>
+                <h1 class="title">See inside a Neo <br> student apartment</h1>
                 <p>Our standard, well-designed studio apartment</p>
                 <ul class="links">
                     <li>
-                        <a href="#">
-                            VIRTUAL TOUR
-                            <i class="far fa-arrow-alt-circle-right fa-2x"></i>
-                        </a>
+                        <a href="#">VIRTUAL TOUR<i class="far fa-arrow-alt-circle-right fa-2x icons"></i></a>
                     </li>
                     <li>
-                        <a href="#">
-                            MAGIC DOOR
-                            <i class="far fa-arrow-alt-circle-right fa-2x"></i>
-                        </a>
+                        <a href="#">MAGIC DOOR<i class="far fa-arrow-alt-circle-right fa-2x icons"></i></a>
                     </li>
 
                 </ul>
@@ -57,27 +45,24 @@
         </main>
 
         <aside>
-            <p>Prices from <br> <strong>&#163;<span>165</span></strong> /pw</p>
+            <p>Prices from <br> <strong><span class="price">&#163;165</span></strong> /pw</p>
         </aside>
 
         <footer>
-            <h2>Neo features</h2>
+            <h2 class="subtitle">Neo features</h2>
             <div class="neo-features-container">
                 <div class="neo-features">
-                    <i class="fas fa-sink fa-2x"></i>
-                    <i class="fas fa-wifi fa-2x"></i>
-                    <i class="fas fa-umbrella fa-2x"></i>
-                    <i class="fas fa-tv fa-2x"></i>
-                    <i class="fas fa-lock-open fa-2x"></i>
-                    <i class="fas fa-faucet fa-2x"></i>
-                    <i class="fas fa-blender fa-2x"></i>
+                    <i class="fas fa-sink fa-2x icons"></i>
+                    <i class="fas fa-wifi fa-2x icons"></i>
+                    <i class="fas fa-umbrella fa-2x icons"></i>
+                    <i class="fas fa-tv fa-2x icons"></i>
+                    <i class="fas fa-lock-open fa-2x icons"></i>
+                    <i class="fas fa-faucet fa-2x icons"></i>
+                    <i class="fas fa-blender fa-2x icons"></i>
                 </div>
                 <ul class="links">
                     <li>
-                        <a href="#">
-                            SEE MORE
-                            <i class="far fa-arrow-alt-circle-right fa-2x"></i>
-                        </a>
+                        <a href="#">SEE MORE<i class="far fa-arrow-alt-circle-right fa-2x icons"></i></a>
                     </li>
                 </ul>
             </div>
