Diseño responsivo casi terminado.

--- a/index.html
+++ b/index.html
@@ -50,15 +50,26 @@
 
         <footer>
             <h2 class="subtitle">Neo features</h2>
-            <div class="neo-features-container">
+            <div class="footer-container">
                 <div class="neo-features">
-                    <i class="fas fa-sink fa-2x icons"></i>
-                    <i class="fas fa-wifi fa-2x icons"></i>
-                    <i class="fas fa-umbrella fa-2x icons"></i>
-                    <i class="fas fa-tv fa-2x icons"></i>
-                    <i class="fas fa-lock-open fa-2x icons"></i>
-                    <i class="fas fa-faucet fa-2x icons"></i>
-                    <i class="fas fa-blender fa-2x icons"></i>
+                    <div class="icons">
+                        <i class="fas fa-sink fa-2x"></i>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-wifi fa-2x"></i>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-umbrella fa-2x"></i>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-tv fa-2x"></i>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-lock-open fa-2x"></i>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-faucet fa-2x"></i>
+                    </div>
                 </div>
                 <ul class="links">
                     <li>
